<resources>
    <string name="app_name">QR Scanner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_type_icon_desc">Scan type icon</string>
    <string name="check_favourite">В избранное</string>
    <string name="toast_favouriteadded">Сканирование добавлено в избранное</string>
    <string name="toast_favouriteremoved">Сканирование удалено из избранного</string>
    <string name="delete_scan_btndesc">Delete scan</string>
    <string name="edit_scan_btndesc">Edit scan</string>
    <string name="share_scan_btndesc">Share scan</string>
    <string name="scanedit_header">Редактирование сканирования</string>
    <string name="scanedit_name">Название сканирования</string>
    <string name="scanedit_savebtn">Сохранить изменения</string>
</resources>
