<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:background="@color/white"
    android:paddingTop="@dimen/vertical_padding"
    android:paddingBottom="@dimen/vertical_padding">

    <ImageView
        android:id="@+id/history_type"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:contentDescription="@string/history_type_icon_desc"
        app:layout_constraintBottom_toBottomOf="@id/history_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/history_name"
        app:srcCompat="@drawable/ic_link_outline" />

    <TextView
        android:id="@+id/history_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:text="@string/app_name"
        android:textColor="@color/gray_850"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/history_name"
        app:layout_constraintStart_toStartOf="@id/history_name"
        app:layout_constraintTop_toBottomOf="@id/history_name" />

    <TextView
        android:id="@+id/history_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:text="@string/app_name"
        android:textColor="@color/steel_gray_300"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/history_name"
        app:layout_constraintStart_toStartOf="@id/history_name"
        app:layout_constraintTop_toBottomOf="@+id/history_data" />

    <CheckBox
        android:id="@+id/favourite_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_padding"
        android:button="@drawable/favourite_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_date" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_scan_btndesc"
        android:onClick="onClick"
        android:src="@drawable/ic_delete_outline"
        app:layout_constraintEnd_toStartOf="@+id/edit_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favourite_switch"
        app:layout_constraintTop_toBottomOf="@+id/history_date" />

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit_scan_btndesc"
        android:src="@drawable/ic_edit_outline"
        app:layout_constraintEnd_toStartOf="@+id/share_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/history_date" />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share_scan_btndesc"
        android:src="@drawable/ic_share_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_button"
        app:layout_constraintTop_toBottomOf="@+id/history_date" />

</androidx.constraintlayout.widget.ConstraintLayout>